--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap');
 
 @import "tailwindcss/preflight";
 @import "tailwindcss/utilities";
@@ -24,10 +24,10 @@
   padding: 0.5vw 2vw 0.5vw 2vw;
 }
 
-body {
+body, html {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   margin: var(--spacing-md);
 }
 
